--- a/Homework1/tables/index.html
+++ b/Homework1/tables/index.html
@@ -12,6 +12,7 @@
             <td colspan='2'><img src="./images/header.png"></img>
             </td>
         </thead>
+        <tbody>
         <tr id="nav_articleTR">
             <td>
                 <table id="navTab">
@@ -47,6 +48,7 @@
                 &copy; Copyright ME, 2013
             </td>
         </tr>
+    </tbody>
     </table>
 </body>
 </html>
