--- a/Homework1/tables/index.html
+++ b/Homework1/tables/index.html
@@ -9,7 +9,7 @@
 <body>
     <table id="pageTab" cellspacing='0' cellpadding="5">
         <thead>
-            <td colspan='2'><img src="./images/header.png" alt="logo"></img>
+            <td colspan='2'><img src="./images/header.png" alt="logo">
             </td>
         </thead>
         <tbody>
