--- a/Homework1/div/index.html
+++ b/Homework1/div/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="./images/header.png" alt="logo"></img>
+        <img src="./images/header.png" alt="logo">
     </header>
     <section>
         <nav>
