--- a/Homework2/flex/index.html
+++ b/Homework2/flex/index.html
@@ -7,15 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <wrapper class="wrapper">
-        <div class="smile">
-            <div class="eyes">
+    <section class="smile">
+        <div class="eyes">
             <div class="eye-left"></div>
             <div class="eye-right"></div>
-            </div>
-            <div class="nose"></div>
-            <div class="mouth"></div>
         </div>
-    </wrapper>
+        <div class="nose"></div>
+        <div class="mouth"></div>
+    </section>
 </body>
 </html>
