--- a/Homework2/grid/index.html
+++ b/Homework2/grid/index.html
@@ -7,13 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <wrapper class="wrapper">
-        <div class="smile">
-                <div class="eye-left"></div>
-                <div class="eye-right"></div>
-                <div class="nose"></div>
-                <div class="mouth"></div>
-        </div>
-    </wrapper>
+    <section class="smile">
+        <div class="eye-left"></div>
+        <div class="eye-right"></div>
+        <div class="nose"></div>
+        <div class="mouth"></div>
+    </section>
 </body>
 </html>
