--- a/Homework7/index.html
+++ b/Homework7/index.html
@@ -8,6 +8,9 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <ul class="files"></ul>
+    <div class="wrapper">
+        <ul class="context-menu"></ul>
+        <ul class="files"></ul>
+      </div>
 </body>
 </html>
